# splendor

./: .gitignore  CMakeLists.txt  build.sh  building_on_windows.md  cards.csv  cards.ods  readme.md
include/: cards.hpp  contents.hpp  game.hpp  main.hpp  money.hpp  player.hpp
src/: cards.cpp  contents.cpp  game.cpp  main.cpp  money.cpp  player.cpp
